--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import '@fontsource/space-mono';
+
 interface Props {
   title: string;
 }
@@ -10,10 +12,9 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="QR Code Generator" />
+    <meta name="description" content="Generador de Código QR desarrollado por Juan Cruz Martinez - Desarrollador Full Stack" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
+    <link class="rounded-full" rel="icon" type="image/svg+xml" href="/qr-image.webp" />
     <title>{title}</title>
   </head>
   <body>
@@ -33,7 +34,8 @@ const { title } = Astro.props;
     );
   }
   html {
-    font-family: system-ui, sans-serif;
-    background: #f6f6f6;
+    font-family: 'Space Mono', sans-serif;
+		scroll-behavior: smooth;
+    background: #024e96;
   }
 </style>
